--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,10 @@
 {
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "2c2s@snca.net",
+      "strict_min_version": "42.0"
+    }
+  },
   "manifest_version": 2,
   "version": "0.0.1",
   "short_name": "2c2s",
@@ -16,5 +22,11 @@
       "background.js"
     ]
   },
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+  "options_ui": {
+    "page": "options.html"
+  },
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+  "permissions": [
+    "storage"
+  ]
 }
