--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "webpack-cli": "^4.7.0"
   },
   "dependencies": {
+    "@extend-chrome/storage": "^1.5.0",
+    "browser-extension-url-match": "^0.3.3",
     "crx-hotreload": "^1.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
